# wmas

./: .gitignore  WMAS.cabal
app/: Main.hs
src/: LScheme.hs
src/LScheme/: Eval.hs  Parser.hs  SchemeVal.hs
src/LScheme/Internal/: Testing.hs
src/LScheme/Parser/: Atom.hs  Character.hs  Float.hs  Internal.hs  Number.hs  String.hs
test/: Eval.hs  Parse.hs
test/LScheme/: EvalSpec.hs  ParserSpec.hs
test/LScheme/Parser/: AtomSpec.hs  CharacterSpec.hs  FloatSpec.hs  InternalSpec.hs  NumberSpec.hs  StringSpec.hs
