name:                WMAS
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/lesguillemets/WMAS#readme
license:             BSD3
license-file:        LICENSE
author:              lesguillemets
maintainer:          kgkacko+github@gmail.com
copyright:           2016 lesguillemets
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     LScheme
                     , LScheme.SchemeVal
                     , LScheme.Parser
                     , LScheme.Parser.Internal
                     , LScheme.Parser.Atom
                     , LScheme.Parser.Character
                     , LScheme.Parser.Number
                     , LScheme.Parser.Float
                     , LScheme.Parser.String
                     , LScheme.Eval
                     , LScheme.Internal.Testing
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , bytestring
                     , containers
  default-language:    Haskell2010

executable Lscheme
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , WMAS
  default-language:    Haskell2010

test-suite test-scheme
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , WMAS
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lesguillemets/WMAS
